--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             good way.Collaborations and brainstorming are always invited.</p>
 
                             <div id="resume">
-                                      <a href="document/resume.docx"><i class="fas fa-download" style="font-size:45px;color:#444;"></i></a>
+                                      <a href="document/rishi_resume.pdf"><i class="fas fa-download" style="font-size:45px;color:#444;"></i></a>
                                        <span style="font-size:25px;"><strong>DOWNLOAD RESUME</strong></span>
                             </div>
 
